paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/restrict_def_2/sample_001/target.compile.log
error[E0277]: `main` has invalid return type `i32`
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/restrict_def_2/sample_001/target.rs:11:14
   |
11 | fn main() -> i32 {
   |              ^^^ `main` can only return types that implement `Termination`
   |
   = help: consider using `()`, or a `Result`

error[E0061]: this function takes 3 arguments but 2 arguments were supplied
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/restrict_def_2/sample_001/target.rs:31:13
   |
31 |         if !check_range_eq(&buf[0..n], &snapshot[off..off + n]) {
   |             ^^^^^^^^^^^^^^------------------------------------- argument #3 of type `usize` is missing
   |
note: function defined here
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/restrict_def_2/sample_001/target.rs:7:4
   |
 7 | fn check_range_eq(a: &[i32], b: &[i32], n: usize) -> bool {
   |    ^^^^^^^^^^^^^^                       --------
help: provide the argument
   |
31 |         if !check_range_eq(&buf[0..n], &snapshot[off..off + n], /* usize */) {
   |                                                               +++++++++++++

error[E0061]: this function takes 3 arguments but 2 arguments were supplied
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/restrict_def_2/sample_001/target.rs:35:13
   |
35 |         if !check_range_eq(&buf[off..off + n], &snapshot[off..off + n]) {
   |             ^^^^^^^^^^^^^^--------------------------------------------- argument #3 of type `usize` is missing
   |
note: function defined here
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/restrict_def_2/sample_001/target.rs:7:4
   |
 7 | fn check_range_eq(a: &[i32], b: &[i32], n: usize) -> bool {
   |    ^^^^^^^^^^^^^^                       --------
help: provide the argument
   |
35 |         if !check_range_eq(&buf[off..off + n], &snapshot[off..off + n], /* usize */) {
   |                                                                       +++++++++++++

error[E0061]: this function takes 3 arguments but 2 arguments were supplied
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/restrict_def_2/sample_001/target.rs:57:13
   |
57 |         if !check_range_eq(&buf[off..off + n], &buf[0..n]) {
   |             ^^^^^^^^^^^^^^-------------------------------- argument #3 of type `usize` is missing
   |
note: function defined here
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/restrict_def_2/sample_001/target.rs:7:4
   |
 7 | fn check_range_eq(a: &[i32], b: &[i32], n: usize) -> bool {
   |    ^^^^^^^^^^^^^^                       --------
help: provide the argument
   |
57 |         if !check_range_eq(&buf[off..off + n], &buf[0..n], /* usize */) {
   |                                                          +++++++++++++

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0061, E0277.
For more information about an error, try `rustc --explain E0061`.